<resources>
    <string name="app_name">What\'s in Pvot</string>

    <!-- Navigation -->
    <string name="tab_home">Home</string>
    <string name="tab_apps">Apps</string>
    <string name="tab_catalog">Catalog</string>
    <string name="tab_about">About</string>
    <string name="cd_home">Navigate to home</string>
    <string name="cd_apps">Navigate to apps</string>
    <string name="cd_catalog">Navigate to catalog</string>
    <string name="cd_about">Navigate to about</string>

    <!-- Common -->
    <string name="stars">Stars</string>

    <!-- Home Screen -->
    <string name="home_error_title">Failed to load feed</string>
...
